[gd_scene load_steps=23 format=2]

[ext_resource path="res://images/face-atlas.png" type="Texture" id=1]
[ext_resource path="res://images/main-buttons-atlas.png" type="Texture" id=2]
[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/background1.jpg" type="Texture" id=4]
[ext_resource path="res://screens/main.gd" type="Script" id=5]
[ext_resource path="res://images/progress-bar-atlas.png" type="Texture" id=6]
[ext_resource path="res://data/hearts.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1.36422e-12, 1.36422e-12, 200, 200 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1.36422e-12, 341, 341, 341 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 341, 341, 341, 341 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 682, 341, 341, 341 )

[sub_resource type="Gradient" id=18]
interpolation_mode = 1
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 0.501961 )

[sub_resource type="GradientTexture" id=20]
gradient = SubResource( 18 )
width = 360

[sub_resource type="DynamicFont" id=19]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=21]
default_font = SubResource( 19 )

[sub_resource type="DynamicFont" id=22]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 22 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 2, 38, 156, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 2, 6, 156, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 2, 38, 156, 20 )

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.266667, 0.407843, 0.666667, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 25.0
expand_margin_right = 22.0

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="Node2D" parent="."]

[node name="Environment" type="Sprite" parent="Background"]
position = Vector2( 1.36422e-12, 1.36422e-12 )
scale = Vector2( 0.701, 0.701 )
texture = ExtResource( 4 )
centered = false

[node name="Overlay" type="ColorRect" parent="Background"]
margin_top = -1.52588e-05
margin_right = 360.0
margin_bottom = 477.0
color = Color( 1, 1, 1, 0.164706 )

[node name="Face" type="Sprite" parent="."]
position = Vector2( 168, 292 )
scale = Vector2( 1.8, 1.87 )
texture = SubResource( 1 )

[node name="Buttons" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Buttons"]
margin_top = 548.0
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.65098, 0.901961, 0.913725, 1 )

[node name="StatsButton" type="TextureButton" parent="Buttons"]
margin_left = 137.0
margin_top = 552.0
margin_right = 478.0
margin_bottom = 893.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = SubResource( 2 )

[node name="FoodButton" type="TextureButton" parent="Buttons"]
margin_left = 25.0
margin_top = 552.0
margin_right = 366.0
margin_bottom = 893.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = SubResource( 6 )

[node name="ActivitiesButton" type="TextureButton" parent="Buttons"]
margin_left = 242.0
margin_top = 551.0
margin_right = 583.0
margin_bottom = 892.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = SubResource( 10 )

[node name="Restart" type="Node2D" parent="Buttons"]
visible = false

[node name="RestartButton" type="TextureButton" parent="Buttons/Restart"]
margin_top = 548.0
margin_right = 360.0
margin_bottom = 640.0
texture_normal = SubResource( 20 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Buttons/Restart"]
margin_top = 557.0
margin_right = 360.0
margin_bottom = 637.0
theme = SubResource( 21 )
custom_colors/font_color = Color( 0.47451, 0.47451, 0.47451, 1 )
text = "RETRY?"
align = 1

[node name="Name" type="Node2D" parent="."]

[node name="Border" type="ColorRect" parent="Name"]
margin_top = 477.0
margin_right = 360.0
margin_bottom = 548.0
color = Color( 0, 0, 0, 1 )

[node name="Background" type="ColorRect" parent="Name"]
margin_top = 481.0
margin_right = 360.0
margin_bottom = 544.0
color = Color( 0.266667, 0.407843, 0.666667, 1 )

[node name="Label" type="Label" parent="Name"]
margin_top = 476.0
margin_right = 360.0
margin_bottom = 556.0
theme = SubResource( 4 )
text = "NAME"
align = 1

[node name="Header" type="Node2D" parent="."]

[node name="HeartsBar" parent="Header" instance=ExtResource( 7 )]
margin_left = 3.0
margin_top = 2.0
margin_right = 1728.0
margin_bottom = 343.0
rect_scale = Vector2( 0.145, 0.145 )

[node name="StaminaBar" type="TextureProgress" parent="Header"]
margin_left = 215.0
margin_top = 14.0
margin_right = 350.0
margin_bottom = 44.0
rect_min_size = Vector2( 1.36422e-12, 30 )
size_flags_horizontal = 3
size_flags_vertical = 0
max_value = 10.0
value = 5.0
texture_under = SubResource( 7 )
texture_over = SubResource( 8 )
texture_progress = SubResource( 9 )
texture_progress_offset = Vector2( 1.36422e-12, 1.36422e-12 )
tint_under = Color( 0, 0.32549, 0.352941, 1 )
tint_over = Color( 0, 0.32549, 0.352941, 1 )
tint_progress = Color( 0.0941176, 0.835294, 0.454902, 1 )
nine_patch_stretch = true
stretch_margin_left = 6
stretch_margin_top = 6
stretch_margin_right = 6
stretch_margin_bottom = 6

[node name="DaysLabel" type="Label" parent="Header"]
margin_left = 154.0
margin_top = 60.0
margin_right = 199.0
margin_bottom = 106.0
grow_horizontal = 2
size_flags_vertical = 0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
text = "0"
align = 1
